[package]
name = "t1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive", "string"] }
#uuid = "1.6.1"
lazy_static = "1.4.0"
aws-config = { version = "1.1.4", features = ["behavior-version-latest"] }
#aws-sdk-dynamodb = "1.10.0"
aws-sdk-dynamodb = { version = "1.10.0", features = ["behavior-version-latest"] }
aws-types = "1.1.4"
# tokio is a aws dependency
tokio = { version = "1.38", features = ["full"] }
# tokio (no TLS) for sqlx
#sqlx = { version = "0.7", features = [ "mysql", "runtime-tokio" ] }
mysql_async = "0.34.*"
aws_smithy_runtime_api = "1.6.*"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]